syntax = "proto3";

package proto;

option go_package = "github.com/dipdup-io/starknet-indexer/pkg/grpc/pb";

message BetweenInteger {
    uint64 from = 1;
    uint64 to = 2;
}

message IntegerFilter {
    uint64 gt = 1;
    uint64 gte = 2;
    uint64 lt = 3;
    uint64 lte = 4;
    uint64 eq = 5;
    uint64 neq = 6; 
    BetweenInteger between = 7;
}

message TimeFilter {
    uint64 gt = 1;
    uint64 gte = 2;
    uint64 lt = 3;
    uint64 lte = 4;
    BetweenInteger between = 5;
}

message EnumFilter {
    uint64 eq = 1;
    uint64 neq = 2;
    repeated uint64 in = 3;
    repeated uint64 notin = 4;
}

message StringFilter {
    string eq = 1;
    repeated string in = 2;
}

message EqualityFilter {
    string eq = 1;
    string neq = 2;
}